added comments and found important features

--- a/predicting OBP.ipynb
+++ b/predicting OBP.ipynb
@@ -1,26 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b78c558d",
+   "metadata": {},
+   "source": [
+    "Importing the packages used:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3747f63d",
+   "execution_count": 29,
+   "id": "f68b110a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf83b334",
+   "metadata": {},
+   "source": [
+    "Loading in the hitters by game CSV"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fbd7d8f2",
+   "id": "3074cf0d",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_397/2452900381.py:1: DtypeWarning: Columns (2,3,4,5,6,7,8,9,10,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_113/2452900381.py:1: DtypeWarning: Columns (2,3,4,5,6,7,8,9,10,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  hitters = pd.read_csv('/mnt/g/ML_data/BB_game_data/hittersByGame.csv')\n"
      ]
     }
@@ -30,9 +50,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08774e3a",
+   "metadata": {},
+   "source": [
+    "Listing the entire CSV out"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ee47054",
+   "id": "523e8dfb",
    "metadata": {},
    "outputs": [
     {
@@ -329,9 +357,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4eae6fa1",
+   "metadata": {},
+   "source": [
+    "Here I am removing out all of the values that are not intergers. No model can accept strings."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0858f0e1",
+   "id": "fd7f8b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,9 +380,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8124ae07",
+   "metadata": {},
+   "source": [
+    "Listing out the Data Frame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b3892d0d",
+   "id": "a8325b38",
    "metadata": {},
    "outputs": [
     {
@@ -558,104 +602,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f069388e",
+   "metadata": {},
+   "source": [
+    "Now I am seeting up the Linear regression model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b406354",
+   "id": "c65bcac1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = hitters[\"OBP\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8f7fc19b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y = hitters[\"OBP\"]\n",
     "x = hitters.copy()\n",
-    "x = x.drop(\"OBP\", axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b13ec05d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "x = x.drop(\"OBP\", axis=1)\n",
+    "\n",
+    "#removing any nan values\n",
     "x.isna().any().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "dcf1e109",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(333958, 9)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b5a9d2f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(333958,)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c4bcc4da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "69b629bc",
+   "id": "bf4a999a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f779cf68",
+   "id": "619c7abe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,75 +655,62 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9d01de89",
+   "id": "29a338bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "rmse = mean_squared_error(y_test, y_pred, squared=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "86b898e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.056818949915478055"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rmse"
+    "rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "print(rmse)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "067d44f1",
+   "id": "23563a50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error"
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(mse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fd8e8f0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mse = mean_squared_error(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "26a462e1",
-   "metadata": {},
+   "execution_count": 27,
+   "id": "cc2cd6a7",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0032283930694976034"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Feature 'AVG': 0.947071239916634\n",
+      "2. Feature 'SLG': 0.04469731686837419\n",
+      "3. Feature 'BB': 0.02297589195730991\n",
+      "4. Feature 'AB': 0.002577987776112637\n",
+      "5. Feature 'K': 0.0010316565374475048\n",
+      "6. Feature '#P': 0.0007574198583634676\n",
+      "7. Feature 'R': 0.00023867400809855083\n",
+      "8. Feature 'RBI': -0.00021992111543974076\n",
+      "9. Feature 'H': -0.0032577343867289097\n"
+     ]
     }
    ],
    "source": [
-    "mse"
+    "coefficients = model.coef_\n",
+    "indices = np.argsort(coefficients)[::-1]\n",
+    "for i in range(X_train.shape[1]):\n",
+    "    print(f\"{i + 1}. Feature '{X_train.columns[indices[i]]}': {coefficients[indices[i]]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55934f6a",
+   "metadata": {},
+   "source": [
+    "This is crazy to think about. The AVG is one of the most important features for prediciting OBP."
    ]
   }
  ],
